# SliderPong

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
banner/: banner.blend  banner.blend1  banner.glb  banner.gltf
lib/: libs.h  utils.h
lib/engine/: Console.cpp  SoftwareKeyboard.cpp  SoftwareKeyboard.h  Texture.cpp  Texture.h  thread.cpp  thread.h
resources/: AppInfo  banner.cgfx  template.rsf
source/: loop.cpp  loop.h  main.cpp  rendering.cpp  rendering.h  utils.cpp  utils.h
